--- a/themes/addons/categoryNameFlair.css
+++ b/themes/addons/categoryNameFlair.css
@@ -1,6 +1,6 @@
 /* Make Channel Categories Match Role Categories */
 
-  --quinary-color: ##5b08d8,
+  --quinary-color: #5b08d8,
 .nameCollapsed-34uFWo,
 .nameDefault-2DI02H,
 .nameHovered-1gxhWH,
